# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gb-emulator-core = { git = "https://github.com/quantatic/Rust-GB/", features = ["wasm-bindgen"], package = "emulator-core" }
gba-emulator-core = { git = "https://github.com/quantatic/rust-gba", package = "emulator-core" }
log = "0.4.17"
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"
web-sys = "0.3.60"
yew = "0.19"
yew-router = "0.16.0"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.33"
futures = "0.3.24"
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"

[profile.release]
panic = "abort"
