# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
gb-emulator-core = { git = "https://github.com/quantatic/Rust-GB/", features = ["wasm-bindgen"], package = "emulator-core" }
gba-emulator-core = { git = "https://github.com/quantatic/rust-gba", package = "emulator-core" }
serde_cbor = "0.11.2"
wasm-bindgen = "0.2.87"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.37"
futures = "0.3.28"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
